reports/BankChurn-Predictor-pytest.txt
============================= test session starts ==============================
platform linux -- Python 3.12.3, pytest-9.0.1, pluggy-1.6.0
rootdir: /home/duque_om/projects/Projects Tripe Ten/BankChurn-Predictor
configfile: pyproject.toml
testpaths: tests
plugins: anyio-4.11.0, Faker-38.0.0, cov-7.0.0
collected 0 items / 1 error

==================================== ERRORS ====================================
_________________ ERROR collecting tests/test_cli_coverage.py __________________
.venv/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
.venv/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:359: in _rewrite_test
    co = compile(tree, strfn, "exec", dont_inherit=True)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E     File "/home/duque_om/projects/Projects Tripe Ten/BankChurn-Predictor/tests/test_cli_coverage.py", line 20
E       from src.bankchurn.cli import *  # noqa
E                                     ^
E   SyntaxError: import * only allowed at module level
=========================== short test summary info ============================
ERROR tests/test_cli_coverage.py
!!!!!!!!!!!!!!!!!!!!!!!!!! stopping after 1 failures !!!!!!!!!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 0.80s ===============================
